add query opener record list   api
